<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/closeButton" layout="@layout/component_close_button" />

    <!-- Flaticon info -->
    <TextView
        android:id="@+id/flaticonPolicyMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="15dp"
        android:scrollbars="vertical"
        android:text="@string/flaticon_message_short"
        android:textColor="?colorOnBackground"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/closeButton" />

    <TextView
        android:id="@+id/expandCollapseMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:text="@string/expand"
        android:textColor="?colorOnBackground"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/flaticonPolicyMessage"
        app:layout_constraintTop_toBottomOf="@id/flaticonPolicyMessage"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?colorOnBackground"
        app:layout_constraintTop_toBottomOf="@id/expandCollapseMessage" />

    <!-- Attributions -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attributionsRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>
