<resources>
    <!-- General -->
    <string name="app_name">Bad Selectors v2</string>
    <string name="title_action_bar">Bad Selectors</string>

    <string name="select">Select</string>

    <string name="placeholder">Under construction!</string>


    <!-- Home -->
    <string name="title_home">Home</string>


    <!-- Phone -->
    <string name="appbar_title_phone">Bad Phone Selectors</string>
    <string name="title_phone">Phone</string>

    <string name="phone_separator">-</string>

    <!-- Select Correct -->
    <string name="title_select_correct">Select Correct</string>

    <string name="mark_correct">Tap digits to mark as correct</string>
    <string name="generate_new_number">Generate New Number</string>
    <string name="single_select">Single select</string>

    <!-- Random Circle -->
    <string name="title_random_circle">Random Circle</string>

    <string name="russian_roulette">Russian roulette</string>

    <!-- Choose Digits -->
    <string name="title_choose_digits">Choose Digits</string>
    <string name="title_choose_digits_dialog">Select Digit Value</string>

    <string name="tap_digits_to_select">Tap digits to set values</string>


    <!-- Date -->
    <string name="appbar_title_date">Bad Date Selectors</string>
    <string name="title_date">Date</string>

    <string name="date_separator">/</string>

    <!-- Nested Circles -->
    <string name="title_nested_circles">Nested Circles</string>

    <string name="change_available_years">Change Available Years</string>


    <!-- Calculator -->
    <string name="appbar_title_calc">Bad Calculators</string>
    <string name="title_calc">Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">C</string>

    <!-- Single Operation -->
    <string name="title_single_operation">Single Operation</string>

    <!-- Enable Random -->
    <string name="title_random_enabled">Random Enabled</string>

    <!-- Add One -->
    <string name="title_add_ones">Add Ones</string>


    <!-- OTP -->
    <string name="appbar_title_otp">Bad OTP Receivers</string>
    <string name="title_otp">OTP</string>


    <!-- Attributions -->
    <string name="title_attributions">Give People Credit</string>
    <string name="flaticon_message">All icons are taken from Flaticon, which allows free use of icons for personal and commercial purposes with attribution. In accordance with their policies, attributions are provided below.\n\nSee here for more information about their policies.</string>
    <string name="flaticon_message_short">All icons are taken from Flaticon. Expand for details of their attribution policies.</string>
    <string name="author_attr_template">Icon made by %s from %s</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>


    <!-- Settings -->
    <string name="title_settings">Settings</string>

    <string name="done">Done</string>


    <!-- Keys -->
    <string name="tab_index_key">tabIndex</string>


    <!-- Content Descriptions -->
    <string name="backspace_cd">Backspace</string>
    <string name="calendar_cd">Date</string>
    <string name="calculator_cd">Calculator</string>
    <string name="cell_phone_cd">Cell Phone</string>
    <string name="chevron_down_cd">Down chevron</string>
    <string name="chevron_left_cd">Left chevron</string>
    <string name="chevron_right_cd">Right chevron</string>
    <string name="chevron_up_cd">Up chevron</string>
    <string name="clear_cd">Clear</string>
    <string name="collapse_dropdown_cd">Hide additional content</string>
    <string name="close_cd">Close</string>
    <string name="divide_cd">Divide</string>
    <string name="equals_cd">Equals</string>
    <string name="expand_dropdown_cd">Show additional content</string>
    <string name="home_cd">Home</string>
    <string name="info_cd">Additional information</string>
    <string name="minus_cd">Minus</string>
    <string name="plus_cd">Plus</string>
    <string name="phone_cd">Phone</string>
    <string name="restart_cd">Restart</string>
    <string name="settings_cd">Settings</string>
    <string name="store_cd">Store value</string>
    <string name="times_cd">Times</string>


    <!-- Dev Tools -->
    <string name="dev_tools_button">{ }</string>

</resources>
