<?xml version="1.0" encoding="utf-8"?>
<ImageButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/infoButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@null"
    android:paddingEnd="@dimen/corner_icon_padding"
    android:paddingBottom="@dimen/corner_icon_padding"
    android:src="@drawable/ic_info"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:tint="?colorOnBackground"
    android:contentDescription="@string/info_cd"
    tools:ignore="RtlSymmetry" />
