<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigationPhone"
        android:icon="@drawable/ic_phone"
        android:title="@string/title_phone" />

    <item
        android:id="@+id/navigationDate"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_date" />

    <item
        android:id="@+id/navigationCalc"
        android:icon="@drawable/ic_calculator"
        android:title="@string/title_calc" />

    <item
        android:id="@+id/navigationOtp"
        android:icon="@drawable/ic_cell_phone"
        android:title="@string/title_otp" />
</menu>
